[tool.poetry]
name = "rasterio-tiff"
version = "0.1.0"
description = "TIFF画像の部分編集ツール"
authors = ["User"]
readme = "README.md"
packages = [{include = "rasterio_tiff"}]

[tool.poetry.dependencies]
python = "^3.11"
tifffile = "^2025.9.9"
rasterio = "^1.4.3"
opencv-python-headless = "^4.12.0.88"
psutil = "^7.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
